kube/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mateo-spotify-backend
  namespace: $NAMESPACE
  labels:
    app: spotify-backend
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: spotify-backend
