kube/database-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mateo-spotify-database
  namespace: $NAMESPACE
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgres
  selector:
    app: postgres
