kube/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mateo-spotify-frontend
  namespace: $NAMESPACE
  labels:
    app: spotify-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: spotify-frontend
