kube/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mateo-spotify-frontend-ingress
  namespace: $NAMESPACE
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - mateo-spotify.duckdns.org
    secretName: api-tls-secret
  rules:
  - host: mateo-spotify.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mateo-spotify-frontend
            port:
              number: 80
